# app/lib/api/model/index.ts
@@ -115,9 +115,6 @@ export * from './customerProductAddResponse';
 export * from './customerProductAllOf';
 export * from './customerProductBase';
 export * from './customerProductBaseCompareAtPrice';
-export * from './customerProductBaseOptionsItem';
-export * from './customerProductBaseOptionsItemVariantsItem';
-export * from './customerProductBaseOptionsItemVariantsItemDuration';
 export * from './customerProductBasePrice';
 export * from './customerProductBookingPeriod';
 export * from './customerProductBookingUnit';
@@ -138,18 +135,16 @@ export * from './customerProductLocationsItemLocationType';
 export * from './customerProductLocationsItemOriginType';
 export * from './customerProductNoticePeriod';
 export * from './customerProductNoticeUnit';
-export * from './customerProductOption';
-export * from './customerProductOptionVariants';
-export * from './customerProductOptionVariantsNodesItem';
-export * from './customerProductOptionVariantsNodesItemDuration';
 export * from './customerProductOptionsAddBody';
 export * from './customerProductOptionsAddResponse';
+export * from './customerProductOptionsAddResponsePayload';
+export * from './customerProductOptionsAddResponsePayloadVariantsItem';
+export * from './customerProductOptionsAddResponsePayloadVariantsItemDuration';
 export * from './customerProductOptionsDestroyResponse';
 export * from './customerProductOptionsList200';
 export * from './customerProductOptionsUpdateBody';
 export * from './customerProductOptionsUpdateBodyItem';
 export * from './customerProductOptionsUpdateResponse';
-export * from './customerProductOptionsUpdateResponsePayload';
 export * from './customerProductSelectedOptions';
 export * from './customerProductUpdateBody';
 export * from './customerProductUpdateBodyCompareAtPrice';
